Bug 1174036 - Handle dynamically-removed textareas gracefully. r=mikedeboer r=ehsan

Also, flush layout when starting a find in order to avoid racing with
textarea-hiding notifications and maintain JS type correctness when objects
are passed over IPC.